# rust_iot_api

./: .env  Cargo.toml  Procfile  README.md  sensordata.db
migrations/2021-01-16-131504_sensor_veri/: down.sql  up.sql
migrations/2022-03-19-125235_sensor_data/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: base.html  index.html
