[package]
name = "actix-diesel-sqlite"
version = "0.1.0"
authors = ["Mustafa Ali CAN <mustafaali0732@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0",features=["derive"]} 
diesel = { version = "1.4.5", features = ["sqlite","chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
actix-web = "3.3.2"
env_logger ="0.8.2"
r2d2 = "0.8.9"
serde_json = "1.0"
r2d2-diesel = "1.0.0"
derive_more = "0.99.11"