[package]
name = "rust_iot_api"
version = "0.1.0"
authors = ["Mustafa Ali CAN <mustafaali0732@gmail.com>"]
edition = "2018"

[dependencies]
serde = {features=["derive"]} 
diesel = { features = ["postgres","chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
actix-web = "4.0.1"
env_logger ="0.9.0"
r2d2 = "0.8.9"
serde_json = "1.0"
r2d2-diesel = "1.0.0"