[package]
name = "rust_iot_api"
version = "0.1.0"
authors = ["Mustafa Ali CAN <mustafaali0732@gmail.com>"]
edition = "2021"

[dependencies]
serde = {version="1.0.136",features=["derive"]} 
diesel = {version="1.4.8",features = ["postgres","chrono"]}
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
actix-web = "4.0.1"
env_logger ="0.9.0"
r2d2 = "0.8.9"
serde_json = "1.0"
r2d2-diesel = "1.0.0"
tera = "1.15.0"